[package]
name = "blur"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
openssl = "0.10.68"
chrono = "0.4.39"
racme = "0.3.4"
thiserror = "^2.0.11"
rustls = "^0.23.22"
rustls-pemfile = "^2.2.0"
reqwest = "0.12.12"
url = "2.5.4"
serde = "1.0.217"
serde_json = "1.0.138"
http = "1.2.0"
