[package]
name = "rblur"
version = "0.2.1"
edition = "2021"
description = "一個支援網頁配置介面的輕量級網頁伺服器"
license = "MIT"
repository = "https://github.com/YuFireWhisper/rblur.git"

[[bin]]
name = "rblur"
path = "src/main.rs"

[dependencies]
once_cell = "1.20.2"
openssl = "0.10.68"
chrono = "0.4.39"
racme = "^0.5.0"
thiserror = "^2.0.11"
rustls = "^0.23.22"
rustls-pemfile = "^2.2.0"
reqwest = "0.12.12"
url = "2.5.4"
serde = "1.0.217"
serde_json = "1.0.138"
http = "1.2.0"
clap = { version = "4.5.29", features = ["derive"] }
